<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:background="@drawable/bg_white_r6_box">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif_notice"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/gif_notice"/>

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/gif_notice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@color/colorTextDarkGray"
            android:textSize="14sp"
            android:text="@string/dialog_theme_delete"/>

        <TextView
            android:id="@+id/delete_in_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorTextGray"
            android:textSize="12sp"
            android:text="@string/dialog_theme_delete_in_storage"/>
        
        <FrameLayout
            android:id="@+id/yes_container"
            android:layout_width="72dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" >
            
            <TextView
                android:id="@+id/yes"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/colorTextGray"
                android:textSize="14sp"
                android:text="@string/dialog_theme_delete_yes"
                android:background="@drawable/ripple_gray_circle"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/no_container"
            android:layout_width="72dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/no"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/colorTextGray"
                android:textSize="14sp"
                android:text="@string/dialog_theme_delete_no"
                android:background="@drawable/ripple_gray_circle"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>