<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dialog"
            type="com.fleet.knock.ui.dialog.TutorialEditorBoomerangDialog" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="324dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_white2_top_r12_box">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/dialog_action_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/title"
            android:scaleType="center"
            android:src="@drawable/ic_boomerang_on"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/dialog_action_bar"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@color/colorTextBlack"
            android:textSize="21sp"
            android:text="@string/dialog_tutorial_editor_boomerang_title" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/dialog_action_bar"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="center"
            android:src="@drawable/ic_close_dp18"
            android:background="@drawable/ripple_black_a10_circle"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/dialog_action_bar"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="56dp"/>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif"
            android:layout_width="312dp"
            android:layout_height="124dp"
            app:layout_constraintTop_toTopOf="@id/dialog_action_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/gif_boomerang"/>

        <TextView
            android:id="@+id/explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/gif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textColor="@color/colorTextBlack"
            android:textSize="16sp"
            android:text="@string/dialog_tutorial_editor_boomerang_explain"/>

        <TextView
            android:id="@+id/apply"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorTextBrightGray2"
            android:textSize="16sp"
            android:text="@string/dialog_tutorial_editor_boomerang_apply"
            android:background="@drawable/ripple_gray_a15_r6_dark_gray_box"
            app:layoutBottomMarginWithNav="@{40}"
            tools:layout_marginBottom="40dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>