<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.fleet.knock.ui.page.main.MainHomeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_video_theme_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginStart="21dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:textColor="@color/colorTextWhite"
                android:textSize="18sp"
                android:text="@string/activity_main_my_video" />

            <View
                android:id="@+id/my_video_theme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/my_video_theme_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layoutRatio="@{vm.gotoEditorRatio}"
                tools:layout_constraintDimensionRatio="320:160"
                android:background="@drawable/ripple_gray_a15_r6_dark_gray_l1_gray_box" />

            <ImageView
                android:id="@+id/my_video_theme_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="@id/my_video_theme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/my_video_theme_text"
                android:src="@drawable/ic_add_video"/>

            <TextView
                android:id="@+id/my_video_theme_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/my_video_theme_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/my_video_theme"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorTextWhite"
                android:text="@string/activity_main_my_video_text" />

            <TextView
                android:id="@+id/local_theme_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@id/my_video_theme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="@{vm.visibilityLocalTheme}"
                android:textStyle="bold"
                android:textColor="@color/colorTextWhite"
                android:textSize="18sp"
                android:text="@string/activity_main_local_theme"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/local_theme_list"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/local_theme_text"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:visibility="@{vm.visibilityLocalTheme}"
                app:recycleItem="@{vm.localTheme}"
                tools:listitem="@layout/view_main_home_local_theme_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>